# Zupe-NL-to-ProductRecommend-System

./: .gitignore  README.md  deployment_guide.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  crontab-docker  crontab.txt  docker-compose.yml  main.py  pyproject.toml
backend/app/core/: config.py
backend/app/graph/: routers.py  state.py  workflow.py
backend/app/graph/nodes/: ask_followup.py  clean_query.py  decide_followup.py  decide_retrieval.py  extract_intent.py  general_qa.py  recommend_products.py  rerank_products.py  vector_search.py
backend/app/graphql/: __init__.py  queries.py
backend/app/memory/: stm.py
backend/app/models/: cross_encoder_client.py  embedding_client.py  llm_client.py
backend/app/schemas/: chat_schema.py  intent_schema.py
backend/app/services/: __init__.py  shopify.py
backend/app/utils/: chat_utils.py  fetch_products.py  intent_utils.py  knowledge_data.py  knowledge_store_sync.py  pinecone_client.py  vector_store_startup.py  vector_store_sync.py
backend/data/: cron_commands.txt  data_structure.txt  knowledge_articles.json  shopify_products.json
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/public/: widget.js
frontend/src/: config.ts  index.css  shopify.ts
frontend/src/components/: ChatHeader.tsx  ChatInput.tsx  ChatWidget.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  ProductRecommendationCard.tsx  SuggestedPrompts.tsx  TypingIndicator.tsx
frontend/src/services/: chatService.ts
